# temporal-agent-harness-example

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy-testing.yml  infra-eks-access.yml  infra-testing-runtime.yml
.zed/: debug.json
agent_harness/: agent.py
claude_harness/: activity_options.py  activity_router.py  claude_agent.py  context_manager.py  guards.py  llm_guards.py  mcp.py  mcp_types.py  streaming.py  tool_types.py  tools.py
infra/: README.md
infra/bootstrap/: README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/stacks/: README.md
simple_chat_agent/: Dockerfile  README.md  __init__.py  auth.py  chat.py  env.py  external_storage.py  github_oauth.py  good_place.py  good_place_guards.py  mcp_auth.py  mcp_oauth.py  store.py  streaming.py  user_chats_workflow.py  web.py  worker.py  workflow.py
simple_chat_agent/api/: __init__.py  anthropic_models.py  auth.py  google_oauth.py  main.py
simple_chat_agent/common/: __init__.py  mcp_auth.py  mcp_oauth.py  store.py  streaming.py
simple_chat_agent/deploy/: README.md  deploy.sh  deployment.yaml  ingressroute.yaml  render-manifest.sh  service.yaml
simple_chat_agent/frontend/: __init__.py  index.html  package-lock.json  package.json  server.py  vite.config.js
simple_chat_agent/static/: app.css  app.js
simple_chat_agent/tools/: __init__.py  approval.py  artifacts.py  github.py  python_sandbox.py  subagent.py
simple_chat_agent/worker/: __init__.py  __main__.py  codec_server.py  main.py  (+4 more)
(+49 files in other folders)
